Fixed spacing at different breakpoints

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@
 }
 
 .vertical-padding {
-    padding-bottom: calc(60px + 4vw);
+    padding-bottom: calc(75px + 5vw);
 }
 
 .container-fluid {
